  * Display author, revision information, and links to previous/next revision
    when viewing an old version of a topic.
  * Support the #switch parser functions.  Usage:
    "{{#switch: value | case1 = result | case2 = result | default}}".
  * Special:VirtualWiki optimizations.  Site name, meta description and logo
    can now allow be customized per-virtual wiki.
  * SEO optimizations: return HTTP 404 when requesting a page for a topic that
    does not exist, return HTTP 500 for error pages, and specify the
    "canonical" meta tag for redirected topics.
  * Remove ability to automatically upgrade from versions prior to 0.8.0.
  * Remove unused/obsolete Javascript and namespace the remaining code.
  * Organize uploaded images by virtual wiki on the file system.
  * Add several indexes to the database to improve query performance.
  * Upgrade to Spring Framework 3.0.3.RELEASE.
  * Upgrade to Spring Security 3.0.3.RELEASE.
  * Upgrade to Ehcache 2.1.0.
  * Upgrade to commons-fileupload-1.2.2.

Bugfixes:

  * Fix template parsing when <includeonly>|</includeonly> is used.
  * Fix template parsing for syntax like "{{{template}}".
  * Interwiki links with no topic name of the form "[[interwiki:]]" should link
    to the root page of the interwiki target site.
  * Images with multiple captions ([[Image:Example.gif|caption1|caption2]])
    should only render the last caption value specified.
  * Fix a design flaw in processing of nested metadata, such as categories
    included via templates or "link to" in records in image captions.
  * A corrupt image should not halt page parsing; instead just display the
    image name as text.

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


0.9.2
=====

New Features:

  * Update the LDAP sample in applicationContext-security.xml with an example
    of using LDAP for authentication and JAMWiki for role management.  Provided
    by Bobby Lawrence.

Bugfixes:
